tests/ui/empty-struct.stderr
error: Struct 'EmptyStruct' has no fields
       note: builder generation requires at least one field to be meaningful
       help: add some fields to your struct
 --> tests/ui/empty-struct.rs:4:10
  |
4 | #[derive(TypeStateBuilder)]
  |          ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `TypeStateBuilder` (in Nightly builds, run with -Z macro-backtrace for more info)
